Revert "Fix focus outline overlapping with text in preview toggle"
This reverts commit 540decdfcca8b8ed83ff169d9012aa5de0559d5b.

Reason for revert: Sources panel tests got very flaky on mac

Original change's description:
> Fix focus outline overlapping with text in preview toggle
>
> Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=559254&signed_aid=rvkADyGUDoXICQ7FGyyqaA==&inline=1
> After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=559255&signed_aid=3U5tBrDAx3fETmI2O_BeLA==&inline=1
>
> Bug: 1337702
> Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3714170
> Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

Bug: 1337702
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3736387
Commit-Queue: Eric Leese <leese@chromium.org>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>

--- a/front_end/ui/components/panel_feedback/previewToggle.css
+++ b/front_end/ui/components/panel_feedback/previewToggle.css
@@ -33,12 +33,6 @@
   padding: 4px;
 }
 
-.container.has-link {
-  /* For x-link outline not to paint over the helper text
-  we need to have 2 * <padding>px additional line height */
-  line-height: calc(1em + 8px);
-}
-
 .x-link {
   color: var(--color-primary);
   text-decoration-line: underline;
